--- a/src/components/BlackJackPage/blackjackPage.scss
+++ b/src/components/BlackJackPage/blackjackPage.scss
@@ -1,10 +1,48 @@
 .playerCards,
 .dealerCards {
+	grid-column: 2/4;
 	display: flex;
 	justify-content: center;
-	margin: 4em 0;
+	// width: max-content;
+	flex-wrap: wrap;
+
+	margin: 4em auto;
 }
 
 .playingCard {
 	margin: 0 1em;
+	height: 150px;
+}
+
+.scoreBox {
+	grid-column: 1;
+	grid-row: 2;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	h2 {
+		width: 100%;
+		text-align: right;
+	}
+}
+.scoreBox:nth-of-type(2) {
+	grid-row: 1;
+	grid-column: 1;
+	vertical-align: middle;
+}
+
+.blackJackBoard {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+}
+.playerButtons {
+	grid-column: 2/4;
+	grid-row: 3;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
