--- a/src/components/BlackJackPage/blackjackPage.scss
+++ b/src/components/BlackJackPage/blackjackPage.scss
@@ -50,3 +50,10 @@
 	justify-content: center;
 	align-items: center;
 }
+
+#announce-text {
+	text-align: center;
+	margin: 0 auto;
+	grid-column: 2/4;
+	grid-row: 3;
+}
