--- a/src/components/BlackJackPage/blackjackPage.scss
+++ b/src/components/BlackJackPage/blackjackPage.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nixie+One');
+
 .playerCards,
 .dealerCards {
 	grid-column: 2/4;
@@ -34,9 +36,12 @@
 }
 
 .blackJackBoard {
-	font-family: "Walter Turncoat", cursive;
-	font-weight: 800;
-	background-color: rgb(209, 171, 92);
+	font-family: 'Nixie One', sans-serif;
+	font-size: calc(8px + 1vmin);
+	color: white;
+	background-color: #1cb45e;
+	background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
+	// background: #065506;
 	min-height: 100vh;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
