--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Nixie+One');
 
+.body {
+	background-color: #000000;
+}
 .playerCards,
 .dealerCards {
 	grid-column: 2/4;
@@ -42,8 +45,8 @@
 	height: 100vh;
 	margin: 0;
 	background: radial-gradient(#34b445, #000000);
-	background-repeat: no-repeat;
-	// background-color: #1cb45e;
+	background-repeat: repeat-y;
+	background-color: #000000;
 	// background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
 	// background: #065506;
 	min-height: 100vh;
