--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -3,6 +3,13 @@
 .body {
 	background-color: #000000;
 }
+
+.blackjackpage {
+	background: radial-gradient(#34b445, #000000);
+	background-color: #000000;
+}
+
+
 .playerCards,
 .dealerCards {
 	grid-column: 2/4;
@@ -44,11 +51,6 @@
 	color: white;
 	height: 100vh;
 	margin: 0;
-	background: radial-gradient(#34b445, #000000);
-	background-repeat: repeat-y;
-	background-color: #000000;
-	// background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
-	// background: #065506;
 	min-height: 100vh;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
@@ -65,6 +67,7 @@
 
 #announce-text {
 	text-align: center;
+	display: block;
 	margin: 0 auto;
 	grid-column: 2/4;
 	grid-row: 3;
