--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,9 +33,10 @@
   color: white;
 }
 
-.mainbtn {
-  margin: 15;
-}
+/* .mainbtn {
+  top: 80px;
+  position: relative;
+} */
 
 .logo {
   text-align: center;
@@ -50,7 +51,7 @@
 }
 
 .logo b{
-  font: 400 15vh "Dosis";
+  font: 400 12vh "Dosis";
   color: #fee;
   text-shadow: 0 -10px 100px, 0 0 2px, 0 0 1em hsl(204, 100%, 66%), 0 0 0.5em hsl(204, 100%, 66%), 0 0 0.1em hsl(204, 100%, 66%), 0 10px 3px #000;
 }
