--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nixie+One');
+@import url("https://fonts.googleapis.com/css?family=Nixie+One");
 
 .body {
 	background-color: #000000;
@@ -39,7 +39,7 @@
 }
 
 .blackJackBoard {
-	font-family: 'Nixie One', sans-serif;
+	font-family: "Nixie One", sans-serif;
 	font-size: calc(8px + 1vmin);
 	color: white;
 	height: 100vh;
@@ -68,4 +68,7 @@
 	margin: 0 auto;
 	grid-column: 2/4;
 	grid-row: 3;
+}
+button:hover {
+	cursor: pointer !important;
 }
