--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,17 +19,56 @@
 }
 
 .App-header {
-  background: #112 url(//images.weserv.nl/?url=i.imgur.com/6QJjYMe.jpg)  center no-repeat;
+  background: #112 url(./images/brickbg.jpg)  center no-repeat;
   background-size:cover;
-  margin:0;
-  min-height: 75vh;
+  margin:0px;
+  padding-top: 0px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: 'Nixie One', sans-serif;
   font-weight: bolder;
-  font-size: calc(75px + 2vmin);
+  font-size: calc(100px + 2vmin);
+  color: white;
+}
+
+header .scrolldown a {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin-left: -29px;
+  color: #fff;
+  display: block;
+  height: 42px;
+  width: 42px;
+  font-size: 42px;
+  line-height: 42px;
+  color: #fff;
+  border-radius: 100%;
+
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+header .scrolldown a:hover { color: rgb(0, 140, 255); }
+.icon-down-circle-1:before { content: '\e80d'; }
+
+
+.pricing {
+  background: #112 url(./images/neonbg.jpg)  center no-repeat;
+  background-size:cover;
+  margin:0px;
+  padding-bottom: 20px;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Nixie One', sans-serif;
+  font-size: calc(25px + 2vmin);
   color: white;
 }
 
@@ -95,26 +134,36 @@
 }
 
 .Blackjack {
-  background-color: #3a5faa;
-  min-height: 50vh;
+  -webkit-filter: brightness(80%);
+  background: #112 url(./components/SlotPage/img/blackjackhome.png)  center no-repeat;
+  background-size:cover;
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: 'Nixie One', sans-serif;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(25px + 2vmin);
   color: white;
+}
+.Blackjack:hover {
+  -webkit-filter: brightness(100%);
+}
+.Slots:hover {
+  -webkit-filter: brightness(100%);
 }
 
 .Slots {
-  background-color: #4af308;
-  min-height: 50vh;
+  -webkit-filter: brightness(80%);
+  background: #112 url(./components/SlotPage/img/slotbg.jpg)  center no-repeat;
+  background-size:cover;
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: 'Nixie One', sans-serif;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(25px + 2vmin);
   color: white;
 }
 
