--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -3,6 +3,10 @@
 .body {
 	background-color: #000000;
 }
+
+.title {
+	padding: 10px;
+}
 .playerCards,
 .dealerCards {
 	grid-column: 2/4;
@@ -47,6 +51,7 @@
 	background: radial-gradient(#34b445, #000000);
 	background-repeat: repeat-y;
 	background-color: #000000;
+	box-shadow: 5px 1px 10px #000000;
 	// background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
 	// background: #065506;
 	min-height: 100vh;
