updated cart page front end

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css?family=Nixie+One'); */
+@import url('https://fonts.googleapis.com/css?family=Nixie+One');
 
 
 @import 'https://fonts.googleapis.com/css?family=Dosis';
