--- a/client/src/components/CartPage/cartPage.css
+++ b/client/src/components/CartPage/cartPage.css
@@ -1,3 +1,60 @@
+.cartBackground {
+	background: #112 url(../../components/SlotPage/img/slotpagebg.jpg) center repeat;
+	/* background-size:cover; */
+	margin:0px;
+	padding-top: 0px;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	font-family: 'Nixie One', sans-serif;
+	font-weight: bolder;
+	font-size: calc(20px + 2vmin);
+	color: white;
+}
+
+.cartList {
+	background-color: rgb(255, 255, 255);
+	padding: 25px;
+	width: 550px;
+	min-height: 100vh;
+	color: rgb(104, 104, 104);
+	font-family: 'Nixie One', sans-serif;
+	font-weight: bolder;
+	justify-content: center;
+    -moz-box-shadow: 0 0 10px #000;
+	-webkit-box-shadow: 0 0 10px #000;
+	box-shadow: 0 0 10px #000;
+
+}
+.nothingBackground {
+	background: #112 url(../../components/SlotPage/img/slotpagebg.jpg) center repeat;
+	/* background-size:cover; */
+	margin:0px;
+	padding-top: 0px;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	font-family: 'Nixie One', sans-serif;
+	font-weight: bolder;
+	font-size: calc(20px + 2vmin);
+	color: white;
+	text-align: center;
+}
+.emptyCartText {
+	background-color: rgb(255, 255, 255);
+	padding: 50px;
+	width: 550px;
+	min-height: 50vh;
+	color: rgb(104, 104, 104);
+	font-family: 'Nixie One', sans-serif;
+	font-weight: bolder;
+	justify-content: center;
+    -moz-box-shadow: 0 0 10px #000;
+	-webkit-box-shadow: 0 0 10px #000;
+	box-shadow: 0 0 10px #000;
+
+}
+
 .delete-button {
 	cursor: pointer;
 }
@@ -5,7 +62,8 @@
 	cursor: initial !important;
 }
 .emptyCartText {
-	font-size: 2em;
+	font-size: 1em;
 	text-align: center;
-	margin-top: 2em;
+	margin-top: 0px;
 }
+
