--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -37,6 +37,20 @@
 		text-align: right;
 	}
 }
+.doubleDownBox {
+	grid-column: 4;
+	grid-row: 2;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+
+	h2 {
+		width: 100%;
+		text-align: left;
+	}
+}
 .scoreBox:nth-of-type(2) {
 	grid-row: 1;
 	grid-column: 1;
@@ -45,7 +59,7 @@
 
 .blackJackBoard {
 	font-family: "Nixie One", sans-serif;
-	font-size: calc(8px + 1vmin);
+	font-size: calc(12px + 1vmin);
 	color: white;
 	height: 100vh;
 	margin: 0;
