--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 100vmin;
   pointer-events: none;
 }
 
@@ -56,12 +56,14 @@ header .scrolldown a {
 header .scrolldown a:hover { color: rgb(0, 140, 255); }
 .icon-down-circle-1:before { content: '\e80d'; }
 
-
+.pricingtitle {
+  padding: 40px;
+}
 .pricing {
   background: #112 url(./images/neonbg.jpg)  center no-repeat;
   background-size:cover;
   margin:0px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   min-height: 50vh;
   display: flex;
   flex-direction: column;
@@ -71,6 +73,7 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
   font-size: calc(25px + 2vmin);
   color: white;
 }
+
 
 /* .mainbtn {
   top: 80px;
@@ -90,9 +93,9 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
 }
 
 .logo b{
-  font: 400 12vh "Dosis";
+  font: 400 20vh "Dosis";
   color: #fee;
-  text-shadow: 0 -10px 100px, 0 0 2px, 0 0 1em hsl(204, 100%, 66%), 0 0 0.5em hsl(204, 100%, 66%), 0 0 0.1em hsl(204, 100%, 66%), 0 10px 3px #000;
+  text-shadow: 0 -10px 100px, 0 0 2px, 0 0 1em hsl(204, 100%, 45%), 0 0 0.5em hsl(204, 100%, 45%), 0 0 0.1em hsl(204, 100%, 45%), 0 10px 3px #000;
 }
 .logo b span{
   animation: blink linear infinite 2s;
