--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -34,6 +34,8 @@
 
 	h2 {
 		width: 100%;
+		font-weight: bold;
+
 		text-align: right;
 	}
 }
@@ -43,12 +45,16 @@
 
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	flex-wrap: wrap;
 
 	h2 {
 		width: 100%;
+		font-weight: bold;
 		text-align: left;
+	}
+
+	.doubleDownButtons {
+		float: left;
 	}
 }
 .scoreBox:nth-of-type(2) {
@@ -61,7 +67,7 @@
 	font-family: "Nixie One", sans-serif;
 	font-size: calc(12px + 1vmin);
 	color: white;
-	height: 100vh;
+	min-height: 100vh;
 	margin: 0;
 	background: radial-gradient(#34b445, #000000);
 	background-repeat: repeat-y;
@@ -69,7 +75,7 @@
 	box-shadow: 5px 1px 10px #000000;
 	// background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
 	// background: #065506;
-	min-height: 100vh;
+
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(3, 1fr);
@@ -80,7 +86,7 @@
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: start;
 }
 
 #announce-text {
@@ -93,9 +99,8 @@ button:hover {
 	cursor: pointer !important;
 }
 
-@media (max-width:910px) {
-.titleimg {
-	width: 100%;
-}
-
+@media (max-width: 910px) {
+	.titleimg {
+		width: 100%;
+	}
 }
