--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Nixie+One");
+@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
+
 
 .body {
 	background-color: #000000;
@@ -14,13 +16,15 @@
 	justify-content: center;
 	// width: max-content;
 	flex-wrap: wrap;
-
-	margin: 4em auto;
+	max-width: 100%;
+	margin: 1em auto;
 }
 
 .playingCard {
-	margin: 0 1em;
+	margin: .2em;
 	height: 150px;
+	border-radius: 10px;
+	box-shadow: 2px 2px 5px black;
 }
 
 .scoreBox {
@@ -37,12 +41,26 @@
 		text-align: right;
 	}
 }
+// .scoreBox2 {
+// 	grid-column: 1;
+// 	grid-row: 2;
+
+// 	display: flex;
+// 	align-items: flex-end;
+// 	justify-content: flex-end;
+// 	flex-wrap: wrap;
+
+// 	h2 {
+// 		width: 100%;
+// 		text-align: right;
+// 	}
+// }
 .doubleDownBox {
 	grid-column: 4;
 	grid-row: 2;
 
 	display: flex;
-	align-items: center;
+	align-items: top;
 	justify-content: center;
 	flex-wrap: wrap;
 
@@ -54,14 +72,19 @@
 .scoreBox:nth-of-type(2) {
 	grid-row: 1;
 	grid-column: 1;
-	vertical-align: middle;
+	vertical-align: bottom;
+}
+
+.entirebg {
+	background: radial-gradient(#34b445, #000000);
 }
 
 .blackJackBoard {
-	font-family: "Nixie One", sans-serif;
-	font-size: calc(12px + 1vmin);
+	font-family: "Teko", sans-serif;
+	font-size: 2em;
+	// font-weight: bolder;
 	color: white;
-	height: 100vh;
+	height: auto;
 	margin: 0;
 	background: radial-gradient(#34b445, #000000);
 	background-repeat: repeat-y;
@@ -69,18 +92,22 @@
 	box-shadow: 5px 1px 10px #000000;
 	// background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
 	// background: #065506;
-	min-height: 100vh;
+	// min-height: 80vh;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(3, 1fr);
+	// grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: auto;
+	// grid-auto-rows: max-content;
+	// grid-auto-rows: 50vmax;
 }
 .playerButtons {
 	grid-column: 2/4;
 	grid-row: 3;
-	margin: 0 auto;
+	margin: 2em auto;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: top;
+	align-items: top;
+	grid-auto-rows: 10vmax;
 }
 
 #announce-text {
