updated front end design all pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,10 @@
   }
 }
 
+.body, html {
+  background-color: black;
+}
+
 .App-header {
   background: #112 url(./images/brickbg.jpg)  center no-repeat;
   background-size:cover;
@@ -63,7 +67,7 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
   background: #112 url(./images/brickbgred.jpg)  center no-repeat;
   background-size:cover;
   margin:0px;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
   min-height: 75vh;
   display: flex;
   flex-direction: column;
@@ -139,10 +143,10 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
 }
 
 .Blackjack {
-  -webkit-filter: brightness(80%);
+  -webkit-filter: brightness(50%);
   background: #112 url(./components/SlotPage/img/blackjackhome.png)  center no-repeat;
   background-size:cover;
-  min-height: 75vh;
+  min-height: 35vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -150,6 +154,7 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
   font-family: 'Nixie One', sans-serif;
   font-size: calc(25px + 2vmin);
   color: white;
+  font-weight: bolder;
 }
 .Blackjack:hover {
   -webkit-filter: brightness(100%);
@@ -159,10 +164,10 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
 }
 
 .Slots {
-  -webkit-filter: brightness(80%);
+  -webkit-filter: brightness(50%);
   background: #112 url(./components/SlotPage/img/slotbg.jpg)  center no-repeat;
   background-size:cover;
-  min-height: 75vh;
+  min-height: 35vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -170,6 +175,7 @@ header .scrolldown a:hover { color: rgb(0, 140, 255); }
   font-family: 'Nixie One', sans-serif;
   font-size: calc(25px + 2vmin);
   color: white;
+  font-weight: bolder;
 }
 
 .App-link {
