--- a/client/src/components/BlackJackPage/blackjackPage.scss
+++ b/client/src/components/BlackJackPage/blackjackPage.scss
@@ -14,7 +14,6 @@
 	grid-column: 2/4;
 	display: flex;
 	justify-content: center;
-	// width: max-content;
 	flex-wrap: wrap;
 	max-width: 100%;
 	margin: 1em auto;
@@ -43,20 +42,7 @@
 		text-align: right;
 	}
 }
-// .scoreBox2 {
-// 	grid-column: 1;
-// 	grid-row: 2;
 
-// 	display: flex;
-// 	align-items: flex-end;
-// 	justify-content: flex-end;
-// 	flex-wrap: wrap;
-
-// 	h2 {
-// 		width: 100%;
-// 		text-align: right;
-// 	}
-// }
 .doubleDownBox {
 	grid-column: 4;
 	grid-row: 2;
@@ -89,23 +75,17 @@
 .blackJackBoard {
 	font-family: "Teko", sans-serif;
 	font-size: 2em;
-	// font-weight: bolder;
 	color: white;
 	height: auto;
-	margin: 0;
+	margin: 0 0 100px 0;
 	background: radial-gradient(#34b445, #000000);
 	background-repeat: repeat-y;
 	background-color: #000000;
 	box-shadow: 5px 1px 10px #000000;
-	// background-image: linear-gradient(148deg, #000000 0%, #1cb45e 90%,);
-	// background: #065506;
-	// min-height: 80vh;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	// grid-template-rows: repeat(3, 1fr);
 	grid-template-rows: auto;
-	// grid-auto-rows: max-content;
-	// grid-auto-rows: 50vmax;
+
 }
 .playerButtons {
 	grid-column: 2/4;
