--- a/client/src/components/SlotPage/SlotApp.css
+++ b/client/src/components/SlotPage/SlotApp.css
@@ -1,7 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Dosis';
 
-.body {
-  background: #656565;
+.background {
+  background-image: url('https://i.ibb.co/mSmPxtC/slotpagebg.jpg');
 }
 
 button:focus {outline:0;}
@@ -31,6 +31,7 @@ button:focus {outline:0;}
   background-image: url(./img/bg.jpg);
   /* background-color: black; */
   margin:0 auto; 
+  margin-bottom: 100px;
   height: 500px;
   position:relative;
   border-radius: 50px;
